--- a/drivers/platform/msm/Kconfig
+++ b/drivers/platform/msm/Kconfig
@@ -1,14 +1,66 @@
 menu "Qualcomm MSM specific device drivers"
 	depends on ARCH_MSM
 
-config MSM_SSBI
-	bool "Qualcomm Single-wire Serial Bus Interface (SSBI)"
+config MSM_AVTIMER
+	tristate "Avtimer Driver"
+	depends on MSM_QDSP6_APRV2 || MSM_QDSP6_APRV3
 	help
-	  If you say yes to this option, support will be included for the
-	  built-in SSBI interface on Qualcomm MSM family processors.
+		This driver gets the Q6 out of power collapsed state and
+		exposes ioctl control to read avtimer tick.
 
-	  This is required for communicating with Qualcomm PMICs and
-	  other devices that have the SSBI interface.
+config MSM_BUS_SCALING
+	bool "Bus scaling driver"
+	help
+		This option enables bus scaling on MSM devices.  Bus scaling
+		allows devices to request the clocks be set to rates sufficient
+		for the active devices needs without keeping the clocks at max
+		frequency when a slower speed is sufficient.
+
+config BUS_TOPOLOGY_ADHOC
+	bool "ad-hoc bus scaling topology"
+	help
+		This option enables a driver that can handle adhoc bus topologies.
+		Adhoc bus topology driver allows one to many connections and maintains
+		directionality of connections by explicitly listing device connections
+		thus avoiding illegal routes.
+
+config DEBUG_BUS_VOTER
+        bool "direct client to vote bus clocks for debugging purposes"
+        depends on BUS_TOPOLOGY_ADHOC
+        default n
+        help
+                This option enables a driver that allows putting in a bus clock vote.
+                This driver allows clients to use the bus scaling driver to put in a
+                floor vote on bus clocks. This feature is meant to be a shortcut to directly
+                put in a vote for bus clocks instead of using the bus scaling APIs which deal
+                with topology end points and not bus clocks directly.
+
+config QPNP_POWER_ON
+	tristate "QPNP PMIC POWER-ON Driver"
+	depends on OF_SPMI && (SPMI || MSM_SPMI) && MSM_QPNP_INT && INPUT
+	help
+	  This driver supports the power-on functionality on Qualcomm
+	  PNP PMIC. It currently supports reporting the change in status of
+	  the KPDPWR_N line (connected to the power-key).
+
+config QPNP_REVID
+	tristate "QPNP Revision ID Peripheral"
+	depends on SPMI || MSM_SPMI
+	help
+	  Say 'y' here to include support for the Qualcomm QPNP REVID
+	  peripheral. REVID prints out the PMIC type and revision numbers
+	  in the kernel log along with the PMIC option status. The PMIC
+	  type is mapped to a Qualcomm chip part number and logged as well.
+
+config QPNP_COINCELL
+	tristate "Qualcomm QPNP coincell charger support"
+	depends on (SPMI || MSM_SPMI) && OF_SPMI
+	help
+	  This driver supports the QPNP coincell peripheral found inside of
+	  Qualcomm QPNP PMIC devices.  The coincell charger provides a means to
+	  charge a coincell battery or backup capacitor which is used to
+	  maintain PMIC register state when the main battery is removed from the
+	  mobile device.
 
 config SPS
 	bool "SPS support"
@@ -20,8 +72,29 @@ config SPS
 		2. Peripheral-to-Memory.
 		3. Memory-to-Memory.
 
+config EP_PCIE
+	bool "PCIe Endpoint mode support"
+	select GENERIC_ALLOCATOR
+	help
+	  PCIe controller is in endpoint mode.
+	  It supports the APIs to clients as a service layer, and allows
+	  clients to enable/disable PCIe link, configure the address
+	  mapping for the access to host memory, trigger wake interrupt
+	  on host side to wake up host, and trigger MSI to host side.
+
+config EP_PCIE_HW
+	bool "PCIe Endpoint HW driver"
+	depends on EP_PCIE
+	help
+	  PCIe endpoint HW specific implementation.
+	  It supports:
+		1. link training with Root Complex.
+		2. Address mapping.
+		3. Sideband signaling.
+		4. Power management.
+
 config USB_BAM
-	boolean "USB BAM Driver"
+	bool "USB BAM Driver"
 	depends on SPS && USB_GADGET
 	help
 	  Enabling this option adds USB BAM Driver.
@@ -46,59 +119,14 @@ config SPS_SUPPORT_NDP_BAM
 	help
 	  No-Data-Path BAM is used to improve BAM performance.
 
-config QPNP_POWER_ON
-	tristate "QPNP PMIC POWER-ON Driver"
-	depends on OF_SPMI && SPMI && MSM_QPNP_INT && INPUT
-	help
-	  This driver supports the power-on functionality on Qualcomm
-	  PNP PMIC. It currently supports reporting the change in status of
-	  the KPDPWR_N line (connected to the power-key).
-
-config QPNP_CLKDIV
-	tristate "QPNP PMIC clkdiv driver"
-	depends on OF_SPMI && SPMI
-	help
-	  This driver supports the clkdiv functionality on the Qualcomm
-	  PNP PMIC. It configures the frequency of clkdiv outputs on the
-	  PMIC. These clocks are typically wired through alternate functions
-	  on gpio pins.
-
 config QPNP_VIBRATOR
 	tristate "Vibrator support for QPNP PMIC"
 	depends on OF_SPMI
 	help
 	  This option enables device driver support for the vibrator
-	  on the Qualcomm's QPNP PMICs. The vibrator is connected on the
-	  VIB_DRV_N line and can be controlled manually or by the DTEST lines.
-	  It uses the android timed-output framework.
-
-config QPNP_REVID
-	tristate "QPNP Revision ID Peripheral"
-	depends on SPMI
-	help
-	  Say 'y' here to include support for the Qualcomm QPNP REVID
-	  peripheral. REVID prints out the PMIC type and revision numbers
-	  in the kernel log along with the PMIC option status. The PMIC
-	  type is mapped to a Qualcomm chip part number and logged as well.
-
-config QPNP_COINCELL
-	tristate "Qualcomm QPNP coincell charger support"
-	depends on SPMI && OF_SPMI
-	help
-	  This driver supports the QPNP coincell peripheral found inside of
-	  Qualcomm QPNP PMIC devices.  The coincell charger provides a means to
-	  charge a coincell battery or backup capacitor which is used to
-	  maintain PMIC register state when the main battery is removed from the
-	  mobile device.
-
-config QPNP_USB_DETECT
-	tristate "Qualcomm QPNP USB VBUS Detection"
-	depends on POWER_SUPPLY
-	help
-	  This driver supports external USB VBUS detection circuitry which
-	  can be connected to Qualcomm QPNP PMIC devices.  The driver will
-	  configure a GPIO from the detector's output line and in turn notify
-	  the USB driver of VBUS presence/disconnection using the power_supply
+	  on the Qualcomm technologies Inc's QPNP PMICs. The vibrator
+	  is connected on the VIB_DRV_N line and can be controlled
+	  manually or by the DTEST lines.It uses the android timed-output
 	  framework.
 
 config IPA
@@ -114,6 +142,30 @@ config IPA
 	  Kernel and user-space processes can call the IPA driver
 	  to configure IPA core.
 
+config IPA3
+	tristate "IPA3 support"
+	depends on SPS && NET
+	help
+	  This driver supports the Internet Packet Accelerator (IPA3) core.
+	  IPA is a programmable protocol processor HW block.
+	  It is designed to support generic HW processing of UL/DL IP packets
+	  for various use cases independent of radio technology.
+	  The driver support client connection and configuration
+	  for the IPA core.
+	  Kernel and user-space processes can call the IPA driver
+	  to configure IPA core.
+
+config GSI
+	bool "GSI support"
+	help
+	  This driver provides the transport needed to talk to the
+	  IPA core. It replaces the BAM transport used previously.
+
+	  The GSI connects to a peripheral component via uniform TLV
+	  interface, and allows it to interface with other peripherals
+	  and CPUs over various types of interfaces such as MHI, xDCI,
+	  xHCI, GPI, WDI, Ethernet, etc.
+
 config RMNET_IPA
 	tristate "IPA RMNET WWAN Network Device"
 	depends on IPA && MSM_QMI_INTERFACE
@@ -123,20 +175,27 @@ config RMNET_IPA
 	  for RmNet Data Driver and also exchange of QMI messages between
 	  A7 and Q6 IPA-driver.
 
-config KLM
-	boolean "KLM Driver"
+config RMNET_IPA3
+	tristate "IPA3 RMNET WWAN Network Device"
+	depends on IPA3 && MSM_QMI_INTERFACE
 	help
-	  This driver handles the power management of the KLM (Key Ladder Module).
+	  This WWAN Network Driver implements network stack class device.
+	  It supports Embedded data transfer from A7 to Q6. Configures IPA HW
+	  for RmNet Data Driver and also exchange of QMI messages between
+	  A7 and Q6 IPA-driver.
 
-config MSM_AVTIMER
-	tristate "Avtimer Driver"
-	depends on MSM_QDSP6_APRV2 || MSM_QDSP6_APRV3
+config IPA_UT
+	tristate "IPA Unit-Test Framework and Test Suites"
+	depends on IPA3 && DEBUG_FS
 	help
-		This driver gets the Q6 out of power collapsed state and
-		exposes ioctl control to read avtimer tick.
+	  This Module implements IPA in-kernel test framework.
+	  The framework supports defining and running tests, grouped
+	  into suites according to the sub-unit of the IPA being tested.
+	  The user interface to run and control the tests is debugfs file
+	  system.
 
 config SSM
-	tristate "Qualcomm Secure Service Module"
+	tristate "QTI Secure Service Module"
 	depends on QSEECOM
 	depends on MSM_SMD
 	help
@@ -164,23 +223,27 @@ config MSM_MHI_UCI
 	  read, write and ioctl operations to communicate with the
 	  attached device.
 
-config QCA1530
-	tristate "QCA1530 SoC GNSS Driver"
-	depends on REGULATOR && OF
-	depends on GPIOLIB && OF_GPIO
-	depends on CLKDEV_LOOKUP
-	help
-	  Say Y here to include support for QCA1530 SOC chip.
+config MSM_MHI_DEBUG
+	 bool "MHI debug support"
+	 depends on MSM_MHI
+	 help
+	   Say yes here to enable debugging support in the MHI transport
+	   and individual MHI client drivers. This option may impact
+	   throughput as individual MHI packets and state transitions
+	   will be logged.
 
-	  QCA1530 chip enables support for GPS- and GLONASS-based position
-	  determination.
-
-	  To compile this driver as a module, choose M here: the module
-	  will be called qca1530.
+config MSM_MHI_DEV
+        tristate "Modem Device Interface Driver"
+	depends on EP_PCIE && IPA
+        help
+          This kernel module is used to interact with PCIe Root complex
+          supporting MHI protocol. MHI is a data transmission protocol
+          involving communication between a host and a device over shared
+          memory. MHI interacts with the IPA for supporting transfers
+	  on the HW accelerated channels between Host and device.
 
 config PFT
 	bool "Per-File-Tagger driver"
-	depends on SECURITY
 	default n
 	help
 		This driver is used for tagging enterprise files.
@@ -188,41 +251,6 @@ config PFT
 		The driver is tagging files when created by
 		registered application.
 		Tagged files are encrypted using the dm-req-crypt driver.
-
-config MSM_SPSS
-	tristate "MSM SPSS driver"
-	default n
-	help
-	  Support for Standby Processing Sub-System (SPSS) module.
-
-config MSM_BUS_SCALING
-	bool "Bus scaling driver"
-	default n
-	help
-		This option enables bus scaling on MSM devices.  Bus scaling
-		allows devices to request the clocks be set to rates sufficient
-		for the active devices needs without keeping the clocks at max
-		frequency when a slower speed is sufficient.
-
-config BUS_TOPOLOGY_ADHOC
-	bool "ad-hoc bus scaling topology"
-	default n
-	help
-		This option enables a driver that can handle adhoc bus topologies.
-		Adhoc bus topology driver allows one to many connections and maintains
-		directionality of connections by explicitly listing device connections
-		thus avoiding illegal routes.
-
-config DEBUG_BUS_VOTER
-	bool "direct client to vote bus clocks for debugging purposes"
-	depends on BUS_TOPOLOGY_ADHOC
-	default n
-	help
-		This option enables a driver that allows putting in a bus clock vote.
-		This driver allows clients to use the bus scaling driver to put in a
-		floor vote on bus clocks. This feature is meant to be a shortcut to directly
-		put in a vote for bus clocks instead of using the bus scaling APIs which deal
-		with topology end points and not bus clocks directly.
 
 config I2C_MSM_PROF_DBG
 	tristate "I2C_MSM_PROF_DBG"
@@ -235,11 +263,13 @@ config I2C_MSM_PROF_DBG
 
 	  This module can also be dynamically linked as a shared kernel object.
 
-config MSM_UIM_HSL
-	tristate "User Indentification Module (UIM) on UART High Speed"
+config SEEMP_CORE
+	tristate "SEEMP Core"
 	help
-	  If you say yes to this option, support will be included for the
-	  built-in UIM interface on Qualcomm MSM family processors.
+	  This option enables Qualcomm Snapdragron Smart Protection to detect
+	  anomalies in various activities. It records task activities in
+	  a log and rates the actions according to whether a typical user would
+	  use the tools.
 
 config QPNP_HAPTIC
 	tristate "Haptic support for QPNP PMIC"
@@ -249,9 +279,75 @@ config QPNP_HAPTIC
 	  on the Qualcomm Technologies' QPNP PMICs. It uses the android
 	  timed-output framework.
 
-config SEEMP_CORE
-	tristate "SEEMP Core"
+config GPIO_USB_DETECT
+	tristate "GPIO-based USB VBUS Detection"
+	depends on POWER_SUPPLY
 	help
-		This option enables malware protection component
-		to log on-device software API activity.
+	  This driver supports external USB VBUS detection circuitry whose
+	  output is connected to a GPIO. The driver in turn notifies the
+	  USB driver of VBUS presence/disconnection using the power_supply
+	  framework.
+
+config MSM_11AD
+	tristate "Platform driver for 11ad chip"
+	depends on PCI
+	depends on PCI_MSM
+	default n
+	---help---
+	  This module adds required platform support for wireless adapter based on
+	  Qualcomm Technologies, Inc. 11ad chip, integrated into MSM platform
+
+	  If you choose to build it as a module, it will be called
+	  msm_11ad_proxy.
+
+config BW_MONITOR
+	bool "Bandwidth monitor driver"
+        depends on BUS_TOPOLOGY_ADHOC && THERMAL
+	help
+	 Enable this module if any bandwidth of a bus needs to be
+	 monitored and limited by thermal core framework. It does
+	 it by registering the bus bandwidth as a sensor in
+	 thermal core framework.
+
+config LGE_PM_HARDRESET_MODE
+	boolean"LGE add hardrset mode in hiddenmenu"
+	depends on LGE_PM
+	default n
+	help
+	  LGE implements hardrset mode in hiddenmenu app
+
+source "drivers/platform/msm/spmi/Kconfig"
+
+config LGE_QPNP_HAPTIC_OV_RB
+	boolean "LGE Add DIRECT MODE Over Drive, Reverse Brake voltage"
+	depends on QPNP_HAPTIC
+	help
+	  LGE implements Over Drive and Reverse Brake voltage on Direct mode.
+
+	default n
+
+config DIRTYSANTA_FIXUP
+	boolean "Do fixups for problems caused by DirtySanta bootloader"
+	help
+	  Workaround problems cause by the unlocked LGE V20 "DirtySanta"
+	  bootloader.
+	default n
+
+config DIRTYSANTA_FIXUP_DEVICENAME
+	string "Device name to use for VENDOR0 smem area"
+	depends on DIRTYSANTA_FIXUP
+	help
+	  This string is used to modify the VENDOR0 structure of the smem area.
+	  This identifies the device name, and therefore what type of modem
+	  chip is expected to be present on the device.  Known values include
+	  "LG-H990", "LG-H990ds", and "LG-H990N".
+
+config DIRTYSANTA_FIXUP_SIMCOUNT
+	int "Indicate SIM count for VENDOR0 smem area"
+	depends on DIRTYSANTA_FIXUP
+	help
+	  This value is used to modify the VENDOR0 structure of the smem area.
+	  This specifies how many SIM slots should be present on the modem of
+	  the device.  Generally 1 or 2.
+
 endmenu
