--- a/arch/arm64/configs/usu_h818_defconfig
+++ b/arch/arm64/configs/usu_h818_defconfig
@@ -45,7 +45,17 @@ CONFIG_CMDLINE_SAR_SEARCH0=" androidboot.serialno=LGLS991"
 CONFIG_CMDLINE_SAR_REPLACE0=" androidboot.serialno=LGH818"
 CONFIG_CMDLINE_SAR_ENABLE1=y
 CONFIG_CMDLINE_SAR_SEARCH1=" model.name=LGLS991 "
-CONFIG_CMDLINE_SAR_REPLACE1=" model.name=LG-H818 lge.sim_num=2 "
+CONFIG_CMDLINE_SAR_REPLACE1=" model.name=LG-H818P lge.sim_num=2 "
+CONFIG_CMDLINE_SAR_ENABLE2=y
+CONFIG_CMDLINE_SAR_SEARCH2=" slub_debug=FZP"
+CONFIG_CMDLINE_SAR_REPLACE2=" "
+
+# Fix the modem memory (UsU)
+CONFIG_DIRTYSANTA_FIXUP=y
+# CONFIG_DIRTYSANTA_FIXUP_SYSFS is not set
+CONFIG_DIRTYSANTA_FIXUP_DEVICENAME="LG-H818P"
+CONFIG_DIRTYSANTA_FIXUP_SIMCOUNT=2
+
 
 #
 # General setup
